pub mod img_processor {
    tonic::include_proto!("img_processor");
}
pub mod landmarks {
    tonic::include_proto!("landmarks");
}
pub mod common {
    tonic::include_proto!("common");
}
pub mod visualization {
    tonic::include_proto!("visualization");
}
pub mod img_common {
    tonic::include_proto!("img_common");
}
pub mod alerts {
    tonic::include_proto!("alerts");
}

pub mod body_info {
    tonic::include_proto!("body_info");
}
